# LearnVulkanBookCode

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
Basic_chapter_02_psedocode/: Vukan编程模型-伪代码.md
Basic_chapter_06_SwapChain/include/: VulkanRenderer.h
Basic_chapter_07a_VertexBuffer/include/: VulkanRenderer.h
Basic_chapter_07b_RenderPass/include/: VulkanRenderer.h
Basic_chapter_07b_RenderPass/source/: VulkanRenderer.cpp
Basic_chapter_07c_FrameBuffer/include/: VulkanRenderer.h
Basic_chapter_07c_FrameBuffer/source/: VulkanRenderer.cpp
Basic_chapter_07d_ClearingBackground/include/: VulkanRenderer.h
Basic_chapter_07d_ClearingBackground/source/: VulkanDrawable.cpp  VulkanRenderer.cpp
Chapter13-04-refactored/: CMakeLists.txt  Chapter13-04-refactored  README.md  application.cpp  application.h  main.cpp  model.h  stb_image.h  uniformManager.cpp  uniformManager.h
Chapter13-04-refactored/shaders/: compile.bat  shader.frag  shader.vert  shader.vert.spv
Chapter13-04-refactored/texture/: CMakeLists.txt  texture.cpp
Chapter13-04-refactored/vulkanWrapper/: CMakeLists.txt  buffer.cpp  commandPool.cpp  descriptorSetLayout.h  fence.cpp  image.h  instance.h  pipeline.cpp  renderPass.h  shader.cpp  swapChain.h  windowSurface.cpp
Chapter16-02/: CMakeLists.txt
Chapter16-02-refactored/: CMakeLists.txt  Chapter16-02-refactored  PIPELINE_ENCAPSULATION_GUIDE.md  README.md  REFACTORING_GUIDE.md  application.cpp  application.h  base.h  bodyPart.cpp  bodyPart.h  main.cpp  robot.cpp  robot.h  stb_image.h  uniformManager.cpp
Chapter17-07/: 校验层日志.txt
Chapter19-01/: CMakeLists.txt
Chapter19-01/src/: AudioManager.cpp  AudioManager.h  CameraUtil.cpp  CameraUtil.h  Dashboard2DObject.cpp  Dashboard2DObject.h  DiCiBox.cpp  DiCiBox.h  DiaoLuoManager.cpp  DiaoLuoManager.h  FPSUtil.cpp  FPSUtil.h  FileUtil.cpp  FileUtil.h  HelpFunction.h  JiaZiBox.cpp  JiaZiBox.h  LightManager.cpp  LightManager.h  LoadUtil.cpp  LoadUtil.h  Matrix.h  MatrixState2D.cpp  MatrixState2D.h  MatrixState3D.cpp  MatrixState3D.h  My3DLayer.cpp  My3DLayer.h  MyDraw.cpp  MyDraw.h  MyVulkanManager.cpp  MyVulkanManager.h  ObjObject.cpp  ObjObject.h  PathData.h  ShaderCompileUtil.cpp  ShaderCompileUtil.h  ShaderQueueSuit_CommonTexLight.cpp  ShaderQueueSuit_CommonTexLight.h  ShaderQueueSuit_Dashboard2D.cpp  (+19 more)
Note/: Vulkan学习笔记.md
STT/: 01-01.课程导学.txt  02-01.初识渲染.txt  02-02.学习向量.txt  02-03.学习矩阵.txt  02-04.二维坐标变换.txt  02-05.三维坐标变换.txt  02-06.光栅化三角形算法.txt  02-07.光栅化直线算法.txt  02-08.光栅化视图矩阵推导.txt  02-09.光栅化投影矩阵推导.txt  03-02.接口理论（二）.txt  03-03.接口理论（三）.txt  03-04.CMake跨平台工程搭建.txt  03-05.开发库环境配置.txt  03-06.程序结构搭建.txt  03-07.Instance封装.txt  03-09.重要工具ValidationLayer.txt  03-10.ValidationLayer封装.txt  04-02.逻辑设备与队列族.txt  04-03.Surface概念与封装.txt  04-04.显示队列族与显示队列.txt  04-05.交换链基础理论.txt  04-06.交换链对象封装.txt  04-07.交换链基础特性获取.txt  04-08.交换链基础特性选取函数.txt  04-09.交换链创建（一）.txt  04-10.交换链创建（二）.txt  05-03.Shader语言与Spirv.txt  05-04.Shader类封装.txt  05-05.Pipeline对象封装.txt  05-06.Pipeline参数设置（一）.txt  05-07.Pipeline参数设置（二）.txt  05-08.Pipeline参数设置（三）.txt  05-09.Pipeline参数设置（四）.txt  06-01.RenderPass基础理论.txt  06-02.SubPass与依赖详解.txt  06-03.SubPass封装.txt  06-04.RenderPass类封装.txt  06-05.RenderPass创建.txt  06-06.FrameBuffer创建.txt  (+43 more)
Vulkan理论部分STT/: 03-01.接口理论（一）.txt  03-08.扩展详解.txt  04-01.物理设备创建.txt  05-01.Pipeline概念精讲（一）.txt  05-02.Pipeline概念精讲（二）.txt  06-07.RenderPass知识点串联与梳理.txt  07-07.绘制与同步原理解析.txt  10-01.Image与Sampler理论介绍.txt  11-01.深度缓存原理详解.txt  11-05.抗锯齿原理介绍.txt
doc/: 《Vulkan开发实战详解》架构说明.md  现代cppVulkan开发架构设计文档.md
ep01instance/: CMakeLists.txt  application.cpp  application.h  base.h
ep02device/: application.cpp  application.h  base.h
ep03surface/: CMakeLists.txt  application.cpp  application.h
ep03surface/vulkanWrapper/: device.cpp  device.h  instance.cpp  window.cpp
ep04swapChain/: application.cpp  application.h  base.h
ep05pipeline/: application.cpp  application.h  base.h
ep06renderPass/: application.cpp  application.h  base.h
ep07command/: application.cpp  application.h  base.h
ep08vertex/: application.cpp  application.h  model.h
ep09uniform/: CMakeLists.txt  application.cpp  application.h  model.h  uniformManager.cpp  uniformManager.h
ep10imageAndSampler/: CMakeLists.txt  application.cpp  application.h  model.h
ep11depth/: application.cpp  main.cpp  stb_image.h  uniformManager.h
ep12antiAlias/: application.cpp  model.h  uniformManager.cpp
ep13modelDrawing/: CMakeLists.txt  Camera.cpp  Camera.h  application.cpp  application.h  main.cpp  model.cpp  model.h  stb_image.h  tiny_obj_loader.h  uniformManager.cpp
mac_m_demo/: CMakelists.txt  mac_compile_shaders.sh  main.cpp
小工具/: README.md  依赖列表.txt
(+1711 files in other folders)
